# CS6795-SmartMathErrorDiagnosis

./: .gitignore  diagnose_error.py  evaluate_student.py  evaluate_vanilla_model.py  generate_failures.py  knowledge_graph.json  plot_loss.py  pyproject.toml  requirements.txt  run_teacher.py  train_student.py
failure_data/: synthetic_dataset.json
src/: data_generator.py  failure_data_generator.py  graph.py  rate_limiter.py  ratelimiter.py  student.py  teacher.py
src/intelligent_error_diagnosis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
student_model_finetuned/: label_map.json
tests/: test_failure_data_generator.py  test_graph.py  test_rate_limiter.py  test_student.py  test_teacher.py  test_teacher_integration.py
